--- a/.github/workflows/main_foodball-stg.yml
+++ b/.github/workflows/main_foodball-stg.yml
@@ -26,13 +26,16 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          
+      - name: Zip all files for upload between jobs
+        run: zip --symlinks -r express.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
-
+          path: express.zip
+          
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -53,4 +56,7 @@ jobs:
           app-name: 'foodball-stg'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_03BEB1A077AA45A5A2B933174C0D4F02 }}
-          package: .
+          package: express.zip
+          
+      - name: Delete zip file
+        run: rm nest.zip
