--- a/.github/workflows/main_foodball-stg.yml
+++ b/.github/workflows/main_foodball-stg.yml
@@ -24,7 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
+          npm run build --force
           
       - name: Zip all files for upload between jobs
         run: zip --symlinks -r express.zip ./*
