--- a/.github/workflows/main_foodball-stg.yml
+++ b/.github/workflows/main_foodball-stg.yml
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -52,10 +52,10 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'foodball-stg'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_03BEB1A077AA45A5A2B933174C0D4F02 }}
-          package: express.zip
+          app-name: 'football-stg'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_1234 }}
+          path: express.zip
           
       - name: Delete zip file
         run: rm express.zip
