--- a/.github/workflows/main_football-stg.yml
+++ b/.github/workflows/main_football-stg.yml
@@ -26,11 +26,14 @@ jobs:
           npm install --force
           npm run build --if-present
 
+      - name: Zip all files for upload between jobs
+        run: zip -r express.zip ./*
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: express.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,4 +55,7 @@ jobs:
           app-name: 'football-stg'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9DE6A5295A7040C2A8BC9528A0CE4498 }}
-          package: .
+          package: express.zip
+          
+      - name: Delete zip file
+        run: rm express.zip   
