--- a/.github/workflows/main_football-management-stg.yml
+++ b/.github/workflows/main_football-management-stg.yml
@@ -25,13 +25,15 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+
+      - name: Zip all files for upload between jobs
+        run: zip -r express.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: express.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +55,8 @@ jobs:
           app-name: 'football-management-stg'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_324C03B63C22417C9849A2F014C3F8F6 }}
-          package: .
+          package: nest.zip
+          
+      - name: Delete zip file
+        run: rm nest.zip
+
