--- a/package.json
+++ b/package.json
@@ -4,51 +4,41 @@
   "description": "A Web & API server built using TypeScript",
   "main": "dist",
   "dependencies": {
+    "@types/bluebird": "^3.5.24",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/redis": "^4.0.11",
     "bcrypt": "^5.1.0",
-    "bulma-extensions": "^6.2.7",
-    "bulma-start": "^0.0.5",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "^3.1.8",
-    "firebase": "^9.17.1",
-    "firebase-admin": "^11.5.0",
-    "google-auth-library": "^8.7.0",
-    "googleapis": "^63.0.0",
-    "helmet": "^6.0.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "joi": "^17.8.4",
-    "moment": "^2.29.4",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
-    "passport-jwt": "^4.0.1",
-    "passport-local-mongoose": "^7.1.2",
-    "randomstring": "^1.2.3",
-    "redis": "^4.6.5",
-    "twilio": "^4.8.0",
-    "uuid": "^9.0.0",
-    "@types/bluebird": "^3.5.24",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "bulma-extensions": "^6.2.7",
+    "bulma-start": "^0.0.5",
     "compression": "^1.7.3",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
+    "debug": "~2.6.9",
     "dotenv": "^6.0.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash": "0.0.2",
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "express-status-monitor": "^1.2.3",
     "express-validator": "^5.3.0",
+    "firebase": "^9.17.1",
+    "firebase-admin": "^11.5.0",
     "font-awesome": "^4.7.0",
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^63.0.0",
+    "helmet": "^6.0.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "joi": "^17.8.4",
     "jquery": "^3.3.1",
     "jquery.easing": "^1.4.1",
     "jsonwebtoken": "^8.3.0",
@@ -57,61 +47,73 @@
     "lusca": "^1.6.1",
     "magnific-popup": "^1.1.0",
     "memory-cache": "^0.2.0",
+    "moment": "^2.29.4",
     "mongodb": "^5.1.0",
     "mongoose": ">=6.4.6",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "passport": ">=0.6.0",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-instagram": "^1.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-linkedin-oauth2": "^1.5.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
     "passport-oauth": "^1.0.0",
+    "passport-oauth2": "^1.7.0",
     "passport-twitter": "^1.0.4",
     "pug": ">=3.0.1",
+    "randomstring": "^1.2.3",
+    "redis": "^4.6.5",
     "request": "^2.88.0",
-    "tslint": "^5.11.0"
+    "tslint": "^5.11.0",
+    "twilio": "^4.8.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/connect-flash": "^0.0.37",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/debug": "^4.1.7",
-    "@types/helmet": "^4.0.0",
-    "@types/http-errors": "^2.0.1",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/morgan": "^1.9.4",
-    "@types/multer": "^1.4.7",
-    "@types/nodemailer": "^6.4.7",
-    "@types/passport-jwt": "^3.0.8",
-    "@types/passport-local": "^1.0.35",
-    "@types/randomstring": "^1.1.8",
-    "@types/uuid": "^9.0.1",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
     "@types/bcrypt-nodejs": "0.0.30",
     "@types/compression": "0.0.36",
+    "@types/connect-flash": "^0.0.37",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.4",
+    "@types/debug": "^4.1.7",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.10",
+    "@types/helmet": "^4.0.0",
+    "@types/http-errors": "^2.0.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^5.2.5",
     "@types/mongodb": "^4.0.7",
+    "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^12.12.17",
+    "@types/nodemailer": "^6.4.7",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
+    "@types/passport-oauth2": "^1.4.12",
+    "@types/randomstring": "^1.1.8",
+    "@types/uuid": "^9.0.1",
     "awesome-typescript-loader": "^5.2.0",
     "mocha": "^5.2.0",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
     "typescript": "5.0.3",
     "typescript-eslint-parser": "^18.0.0"
   },
   "scripts": {
-    "build": "npm run tsc",
+    "build": " npm run clean && npm run tsc",
     "tsc": "tsc -p tsconfig.json",
     "dev": "tsc --watch & NODE_ENV=development nodemon dist",
     "test": "tsc && ./node_modules/.bin/mocha dist/**/*.spec.js",
     "lint": "tslint 'src/**/*.ts' --fix",
-    "clean":"rm -rf dist/ .logs/",
-    "start":"node dist/server.js",
+    "clean": "rm -rf dist/ .logs/",
+    "start": "node dist/server.js",
     "deploy": "npm run clean && npm run build && npm run start"
   },
   "author": "Faiz A. Farooqui <faiz@geekyants.com>",
