--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.2.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash": "0.0.2",
@@ -109,11 +109,11 @@
   "scripts": {
     "build": " npm run clean && npm run tsc",
     "tsc": "tsc -p tsconfig.json",
-    "dev": "tsc --watch & NODE_ENV=development nodemon dist",
+    "dev": "nodemon src/index.ts",
     "test": "tsc && ./node_modules/.bin/mocha dist/**/*.spec.js",
     "lint": "tslint 'src/**/*.ts' --fix",
     "clean": "rm -rf dist/ .logs/",
-    "start": "node dist/server.js",
+    "start": "node dist",
     "deploy": "npm run clean && npm run build && npm run start"
   },
   "author": "Faiz A. Farooqui <faiz@geekyants.com>",
