--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "express": "^4.18.2",
     "express-flash": "0.0.2",
     "express-jwt": "^5.3.1",
-    "express-session": "^1.15.6",
+    "express-session": "^1.17.3",
     "express-status-monitor": "^1.2.3",
     "express-validator": "^5.3.0",
     "firebase": "^9.17.1",
@@ -52,6 +52,7 @@
     "mongoose": ">=6.4.6",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "node-forge": "^1.3.1",
     "nodemailer": "^6.9.1",
     "passport": ">=0.6.0",
     "passport-facebook": "^2.1.1",
@@ -92,6 +93,7 @@
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^12.12.17",
+    "@types/node-forge": "^1.3.2",
     "@types/nodemailer": "^6.4.7",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
