--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-flash": "0.0.2",
     "express-jwt": "^5.3.1",
     "express-session": "^1.17.3",
+    "express-sslify": "^1.2.0",
     "express-status-monitor": "^1.2.3",
     "express-validator": "^5.3.0",
     "firebase": "^9.17.1",
@@ -85,6 +86,7 @@
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.10",
+    "@types/express-sslify": "^1.2.2",
     "@types/helmet": "^4.0.0",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
