--- a/.github/workflows/main_football-management-stg.yml
+++ b/.github/workflows/main_football-management-stg.yml
@@ -36,17 +36,13 @@ jobs:
           path: express.zip
 
   deploy:
-  
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - uses: azure/login@v1
-        with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
@@ -56,9 +52,9 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'football-management-stg'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_324C03B63C22417C9849A2F014C3F8F6 }}
+          app-name: 'footballmanagement-hv'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_44cedc0225ae42a38947194248fa2783 }}
           package: express.zip
           
       - name: Delete zip file
