--- a/.github/workflows/main_footballmanagement-hv.yml
+++ b/.github/workflows/main_footballmanagement-hv.yml
@@ -23,15 +23,17 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
+          npm install --force
           npm run build --if-present
-          npm run test --if-present
+
+      - name: Zip all files for upload between jobs
+        run: zip -r express.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: express.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +55,7 @@ jobs:
           app-name: 'footballmanagement-hv'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9C127E3473F041FAADEA7F7FC26B25BF }}
-          package: .
+          package: express.zip
+      
+      - name: Delete zip file
+        run: rm express.zip
